# SIN-Code-Frontend-Design-Skill

./: .gitignore  AGENTS.md  CHANGELOG.md  INSTALL.md  README.md  SKILL.md  install.sh  pyproject.toml  requirements.txt
scripts/: design-a11y.doc.md  design-a11y.sh  design-component.doc.md  design-component.sh  design-load.doc.md  design-load.sh  design-page.doc.md  design-page.sh  design-review.doc.md  design-review.sh  design-tokens.doc.md  design-tokens.sh
src/sin_frontend_design/: __init__.doc.md  __init__.py  a11y.doc.md  a11y.py  components.doc.md  components.py  mcp_server.doc.md  mcp_server.py  pages.doc.md  pages.py  responsive.doc.md  responsive.py  reviewer.doc.md  reviewer.py  system.doc.md  system.py  tokens.doc.md  tokens.py
src/sin_frontend_design/cli_shims/: __init__.py  design_a11y_check.py  design_component_create.py  design_figma_export.py  design_page_scaffold.py  design_responsive_test.py  design_review.py  design_system_load.py  design_token_extract.py
tests/: test_a11y.doc.md  test_a11y.py  test_codocs.doc.md  test_codocs.py  test_components.doc.md  test_components.py  test_pages.doc.md  test_pages.py  test_responsive.doc.md  test_responsive.py  test_reviewer.doc.md  test_reviewer.py  test_scripts.doc.md  test_scripts.py  test_server.doc.md  test_server.py  test_system.doc.md  test_system.py  test_tokens.doc.md  test_tokens.py
